--- a/index.html
+++ b/index.html
@@ -731,7 +731,7 @@
       if (!samples.length) return [];
 
       const sectors = [];
-      const normalize = (value) => (Number.isFinite(value) && value > 0 ? value : null);
+      const normalize = (value) => (Number.isFinite(value) ? value : null);
       let currentSector = normalize(samples[0].sector);
       let startDistance = samples[0].distance;
       for (let i = 1; i < samples.length; i++) {
@@ -744,7 +744,7 @@
         if (sectorValue !== currentSector) {
           sectors.push({
             index: currentSector,
-            label: `S${currentSector}`,
+            label: `S${(currentSector ?? 0) + 1}`,
             start: startDistance,
             end: samples[i].distance
           });
@@ -755,7 +755,7 @@
       if (currentSector != null) {
         sectors.push({
           index: currentSector,
-          label: `S${currentSector}`,
+          label: `S${(currentSector ?? 0) + 1}`,
           start: startDistance,
           end: samples[samples.length - 1].distance
         });
