--- a/index.html
+++ b/index.html
@@ -56,16 +56,15 @@
         font-size: 1.3rem;
       }
 
-      main {
-        flex: 1;
-        padding: 1.5rem;
-        display: flex;
-        flex-direction: column;
-        gap: 1.5rem;
-        max-width: 1200px;
-        width: 100%;
-        margin: 0 auto;
-      }
+    main {
+      flex: 1;
+      padding: 1.5rem;
+      display: flex;
+      flex-direction: column;
+      gap: 1.5rem;
+      width: min(95vw, 1800px);
+      margin: 0 auto;
+    }
 
       .panel {
         background: var(--panel-bg);
@@ -148,30 +147,40 @@
         margin-bottom: 0.15rem;
       }
 
-      .layout {
-        display: grid;
-        grid-template-columns: minmax(260px, 320px) 1fr;
-        gap: 1.25rem;
-      }
+    .layout {
+      display: grid;
+      grid-template-columns: minmax(360px, 1fr) 2fr;
+      gap: 1.25rem;
+      align-items: stretch;
+    }
 
-      @media (max-width: 1000px) {
-        .layout {
-          grid-template-columns: 1fr;
-        }
+    @media (max-width: 1200px) {
+      .layout {
+        grid-template-columns: 1fr;
       }
+    }
 
       .track-panel {
         display: flex;
         flex-direction: column;
         gap: 0.75rem;
+        height: 100%;
+        min-height: 360px;
+      }
+
+      .track-panel > div {
+        flex: 1;
+        display: flex;
+        flex-direction: column;
       }
 
       #trackCanvas {
         width: 100%;
-        height: 360px;
+        flex: 1;
         border: 1px solid var(--border);
         border-radius: 12px;
         background: #fff;
+        display: block;
       }
 
       .lap-files {
