--- a/index.html
+++ b/index.html
@@ -149,23 +149,36 @@
 
     .layout {
       display: grid;
-      grid-template-columns: minmax(360px, 1fr) 2fr;
+      grid-template-columns: minmax(340px, 0.9fr) minmax(0, 1.1fr);
+      grid-auto-rows: minmax(0, auto);
+      grid-auto-flow: dense;
       gap: 1.25rem;
-      align-items: stretch;
+      align-items: start;
     }
 
     @media (max-width: 1200px) {
       .layout {
         grid-template-columns: 1fr;
       }
+      .track-panel {
+        grid-row: auto;
+      }
+    }
+
+    @media (min-width: 1600px) {
+      .layout {
+        grid-template-columns: minmax(320px, 0.8fr) repeat(2, minmax(0, 1fr));
+      }
     }
 
       .track-panel {
+        grid-column: 1;
+        grid-row: span 20;
         display: flex;
         flex-direction: column;
         gap: 0.75rem;
-        height: 100%;
         min-height: 360px;
+        height: 100%;
       }
 
       .track-panel > div {
@@ -308,12 +321,6 @@
         border-radius: 999px;
         padding: 0.1rem 0.5rem;
         background: var(--bg);
-      }
-
-      .lanes {
-        display: flex;
-        flex-direction: column;
-        gap: 1rem;
       }
 
       .lane {
@@ -523,51 +530,49 @@
             <canvas id="trackCanvas" width="320" height="360"></canvas>
           </div>
         </div>
-        <div class="lanes">
-          <div class="lane">
-            <div class="lane-header">
-              <span class="lane-title">Throttle</span>
-              <span class="lane-hint">% vs distance</span>
-            </div>
-            <div class="lane-canvas">
-              <canvas id="throttleLane"></canvas>
-            </div>
+        <div class="lane">
+          <div class="lane-header">
+            <span class="lane-title">Throttle</span>
+            <span class="lane-hint">% vs distance</span>
           </div>
-          <div class="lane">
-            <div class="lane-header">
-              <span class="lane-title">Brake</span>
-              <span class="lane-hint">% vs distance</span>
-            </div>
-            <div class="lane-canvas">
-              <canvas id="brakeLane"></canvas>
-            </div>
+          <div class="lane-canvas">
+            <canvas id="throttleLane"></canvas>
           </div>
-          <div class="lane">
-            <div class="lane-header">
-              <span class="lane-title">Speed</span>
-              <span class="lane-hint">km/h vs distance</span>
-            </div>
-            <div class="lane-canvas">
-              <canvas id="speedLane"></canvas>
-            </div>
+        </div>
+        <div class="lane">
+          <div class="lane-header">
+            <span class="lane-title">Brake</span>
+            <span class="lane-hint">% vs distance</span>
           </div>
-          <div class="lane">
-            <div class="lane-header">
-              <span class="lane-title">Gear &amp; RPM</span>
-              <span class="lane-hint">gear &amp; rpm vs distance</span>
-            </div>
-            <div class="lane-canvas">
-              <canvas id="gearRpmLane"></canvas>
-            </div>
+          <div class="lane-canvas">
+            <canvas id="brakeLane"></canvas>
           </div>
-          <div class="lane">
-            <div class="lane-header">
-              <span class="lane-title">Steering</span>
-              <span class="lane-hint">% vs distance</span>
-            </div>
-            <div class="lane-canvas">
-              <canvas id="steeringLane"></canvas>
-            </div>
+        </div>
+        <div class="lane">
+          <div class="lane-header">
+            <span class="lane-title">Speed</span>
+            <span class="lane-hint">km/h vs distance</span>
+          </div>
+          <div class="lane-canvas">
+            <canvas id="speedLane"></canvas>
+          </div>
+        </div>
+        <div class="lane">
+          <div class="lane-header">
+            <span class="lane-title">Gear &amp; RPM</span>
+            <span class="lane-hint">gear &amp; rpm vs distance</span>
+          </div>
+          <div class="lane-canvas">
+            <canvas id="gearRpmLane"></canvas>
+          </div>
+        </div>
+        <div class="lane">
+          <div class="lane-header">
+            <span class="lane-title">Steering</span>
+            <span class="lane-hint">% vs distance</span>
+          </div>
+          <div class="lane-canvas">
+            <canvas id="steeringLane"></canvas>
           </div>
         </div>
       </section>
