--- a/index.html
+++ b/index.html
@@ -212,46 +212,24 @@
       }
 
       .layout {
-        display: grid;
-        grid-template-columns: minmax(340px, 0.9fr) minmax(0, 1.1fr);
-        grid-auto-rows: minmax(0, auto);
-        grid-auto-flow: dense;
+        display: flex;
+        flex-direction: row;
         gap: 1.25rem;
-        align-items: start;
-      }
-      .layout > .lane {
-        grid-column: 2;
+        align-items: flex-start;
       }
 
       @media (max-width: 1200px) {
         .layout {
-          grid-template-columns: 1fr;
-        }
-        .track-panel {
-          grid-row: auto;
-        }
-        .layout > .lane {
-          grid-column: 1;
-        }
-      }
-
-      @media (min-width: 1600px) {
-        .layout {
-          grid-template-columns: minmax(320px, 0.8fr) repeat(2, minmax(0, 1fr));
-        }
-        .layout > .lane {
-          grid-column: auto;
+          flex-direction: column;
         }
       }
 
       .track-panel {
-        grid-column: 1;
-        grid-row: span 20;
+        flex: 0 0 360px;
         display: flex;
         flex-direction: column;
         gap: 0.75rem;
         min-height: 360px;
-        height: 100%;
       }
 
       .track-panel > div {
@@ -611,58 +589,60 @@
             <canvas id="trackCanvas" width="320" height="360"></canvas>
           </div>
         </div>
-        <div class="lane">
-          <div class="lane-header">
-            <span class="lane-title">Throttle</span>
-            <span class="lane-hint">% vs distance</span>
+        <div class="lanes-wrapper">
+          <div class="lane">
+            <div class="lane-header">
+              <span class="lane-title">Throttle</span>
+              <span class="lane-hint">% vs distance</span>
+            </div>
+            <div class="lane-canvas">
+              <canvas id="throttleLane"></canvas>
+            </div>
           </div>
-          <div class="lane-canvas">
-            <canvas id="throttleLane"></canvas>
+          <div class="lane">
+            <div class="lane-header">
+              <span class="lane-title">Brake</span>
+              <span class="lane-hint">% vs distance</span>
+            </div>
+            <div class="lane-canvas">
+              <canvas id="brakeLane"></canvas>
+            </div>
           </div>
-        </div>
-        <div class="lane">
-          <div class="lane-header">
-            <span class="lane-title">Brake</span>
-            <span class="lane-hint">% vs distance</span>
+          <div class="lane">
+            <div class="lane-header">
+              <span class="lane-title">Speed</span>
+              <span class="lane-hint">km/h vs distance</span>
+            </div>
+            <div class="lane-canvas">
+              <canvas id="speedLane"></canvas>
+            </div>
           </div>
-          <div class="lane-canvas">
-            <canvas id="brakeLane"></canvas>
+          <div class="lane">
+            <div class="lane-header">
+              <span class="lane-title">Gear &amp; RPM</span>
+              <span class="lane-hint">gear &amp; rpm vs distance</span>
+            </div>
+            <div class="lane-canvas">
+              <canvas id="gearRpmLane"></canvas>
+            </div>
           </div>
-        </div>
-        <div class="lane">
-          <div class="lane-header">
-            <span class="lane-title">Speed</span>
-            <span class="lane-hint">km/h vs distance</span>
+          <div class="lane">
+            <div class="lane-header">
+              <span class="lane-title">Steering</span>
+              <span class="lane-hint">% vs distance</span>
+            </div>
+            <div class="lane-canvas">
+              <canvas id="steeringLane"></canvas>
+            </div>
           </div>
-          <div class="lane-canvas">
-            <canvas id="speedLane"></canvas>
-          </div>
-        </div>
-        <div class="lane">
-          <div class="lane-header">
-            <span class="lane-title">Gear &amp; RPM</span>
-            <span class="lane-hint">gear &amp; rpm vs distance</span>
-          </div>
-          <div class="lane-canvas">
-            <canvas id="gearRpmLane"></canvas>
-          </div>
-        </div>
-        <div class="lane">
-          <div class="lane-header">
-            <span class="lane-title">Steering</span>
-            <span class="lane-hint">% vs distance</span>
-          </div>
-          <div class="lane-canvas">
-            <canvas id="steeringLane"></canvas>
-          </div>
-        </div>
-        <div class="lane">
-          <div class="lane-header">
-            <span class="lane-title">Delta</span>
-            <span class="lane-hint">s vs distance</span>
-          </div>
-          <div class="lane-canvas">
-            <canvas id="deltaLane"></canvas>
+          <div class="lane">
+            <div class="lane-header">
+              <span class="lane-title">Delta</span>
+              <span class="lane-hint">s vs distance</span>
+            </div>
+            <div class="lane-canvas">
+              <canvas id="deltaLane"></canvas>
+            </div>
           </div>
         </div>
       </section>
