--- a/index.html
+++ b/index.html
@@ -626,11 +626,20 @@
           </div>
           <div class="lane">
             <div class="lane-header">
-              <span class="lane-title">Gear &amp; RPM</span>
-              <span class="lane-hint">gear &amp; rpm vs distance</span>
+              <span class="lane-title">RPM</span>
+              <span class="lane-hint">rpm vs distance</span>
             </div>
             <div class="lane-canvas">
-              <canvas id="gearRpmLane"></canvas>
+              <canvas id="rpmLane"></canvas>
+            </div>
+          </div>
+          <div class="lane">
+            <div class="lane-header">
+              <span class="lane-title">Gear</span>
+              <span class="lane-hint">gear vs distance</span>
+            </div>
+            <div class="lane-canvas">
+              <canvas id="gearLane"></canvas>
             </div>
           </div>
           <div class="lane">
