--- a/admin/track-map-preview.html
+++ b/admin/track-map-preview.html
@@ -42,6 +42,11 @@
         font-size: 14px;
         gap: 6px;
       }
+      .controls label.checkbox {
+        flex-direction: row;
+        align-items: center;
+        gap: 8px;
+      }
       input[type='number'],
       select {
         background: #020617;
@@ -130,7 +135,7 @@
 
       <section class="card">
         <h2>Calibration laps</h2>
-        <p>Select 2–3 CSVs exported from LMU (left/right required, center optional).</p>
+        <p>Select 2–3 CSVs exported from LMU (left/right required; center optional).</p>
         <input id="fileInput" type="file" accept=".csv" multiple />
         <div id="trackInfo" style="margin-top: 12px; font-size: 14px; color: #cbd5f5"></div>
         <div id="fileList" style="margin-top: 16px"></div>
@@ -145,6 +150,14 @@
           <label>
             Smoothing window
             <input id="smoothInput" type="number" min="5" max="200" step="5" value="30" />
+          </label>
+          <label>
+            Width clamp (%)
+            <input id="clampInput" type="number" min="50" max="105" step="1" value="100" />
+          </label>
+          <label class="checkbox">
+            <input id="guardrailToggle" type="checkbox" checked />
+            Enforce guardrails
           </label>
           <button id="generateBtn" disabled>Generate preview</button>
         </div>
